app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mon-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mon-app
  template:
    metadata:
      labels:
        app: mon-app
    spec:
      containers:
      - name: mon-app
        image: harbor.local/library/mon-app:76f85861c571e225bf7a488ea50a59cb7d833628
        ports:
        - containerPort: 80
        imagePullPolicy: Always
      imagePullSecrets:
      - name: harbor-registry-secret
