app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mon-app
  namespace: default
spec:
  selector:
    app: mon-app
  ports:
  - port: 80
    targetPort: 80
