app/k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mon-app-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`app.local`)
      kind: Rule
      services:
        - name: mon-app
          port: 80
